@@ -17,15 +17,17 @@ require $SELF_DIR . '/lib/config.pm';
 require $SELF_DIR . '/lib/log.pm';
 require $SELF_DIR . '/lib/roles.pm';
 
-# Read config file
-our $config = ReadConfig("mmm_agent.conf");
-
-if (scalar(@ARGV) < 1) {
-    print "Usage: $0 <role>\n\n";
+if (scalar(@ARGV) < 2) {
+    print "Usage: $0 <config> <role>\n\n";
     exit(1);
 }
 
-my $role = $ARGV[0];
+our $MMM_CONFIG = $ARGV[0];
+
+# Read config file
+our $config = ReadConfig($MMM_CONFIG);
+
+my $role = $ARGV[1];
 $role =~ /^(.*)\((.*);(.*)\)$/;
 my $role_name = $1;
 my $ip = $2;
