@@ -16,8 +16,16 @@ our $SELF_DIR = dirname(dirname(Cwd::abs_path(__FILE__)));
 # Include parts of the system
 require $SELF_DIR . '/lib/config.pm';
 
+if (scalar(@ARGV) < 1)
+{
+    print "ERROR: Usage: $0 <config>";
+    exit(1);
+}
+
+our $MMM_CONFIG = $ARGV[0];
+
 # Read config file and status
-our $config = ReadConfig("mmm_agent.conf");
+our $config = ReadConfig($MMM_CONFIG);
 
 print MySqlDenyWrite();
 
