@@ -1,3 +1,7 @@
+2009-02-23
+
+•       added the ability to choose the agent configuration file from the command line
+
 2009-02-19
 
 •       minor changes
